name:           benchpress
version:        0.2.2.24
synopsis:       Micro-benchmarking with detailed statistics.
Description:    Benchmarks actions and produces statistics
                such as min, mean, median, standard deviation,
                and max execution time.  Also computes
                execution time percentiles.  Comes with
                functions to pretty-print the results.
license:        BSD3
license-file:   LICENSE
author:         Johan Tibell
maintainer:     me@willsewell.com
build-type:     Simple
cabal-version:  >= 1.10
category:       Testing
homepage:       https://github.com/WillSewell/benchpress

library
  exposed-modules:  Test.BenchPress

  other-modules:  Math.Statistics

  build-depends:  base >= 2.0 && < 4.21,
                  mtl >= 1 && < 2.4,
                  time >= 1 && < 1.15

  default-language:  Haskell2010

  ghc-options:  -funbox-strict-fields -Wall

executable example
  main-is:  Main.hs

  -- This is not in build-depends for cabal 1.2 compatibility (requires 1.8)
  other-modules:  Test.BenchPress
                  Math.Statistics

  hs-source-dirs:  example, .

  build-depends:  base >= 2.0 && < 4.21,
                  bytestring >= 0.12 && < 0.13,
                  time >= 1 && < 1.15

  default-language:  Haskell2010

  ghc-options:  -funbox-strict-fields -Wall
